# devinit

./: .gitignore  Cargo.toml  LICENSE  README.md  README_EN.md  devenv.nix  flake.nix
docs/superpowers/plans/: 2026-03-23-devenv-ignore-handling.md  2026-03-23-go-init.md  2026-03-23-init-guard.md  2026-03-23-java-init.md  2026-03-23-javascript-init.md  2026-03-23-python-init.md  2026-03-24-auto-detection.md  2026-03-24-envrc-merge.md  2026-03-24-java-javascript-version-detection.md
docs/superpowers/specs/: 2026-03-23-devenv-ignore-design.md  2026-03-23-go-init-design.md  2026-03-23-init-guard-design.md  2026-03-23-java-init-design.md  2026-03-23-javascript-init-design.md  2026-03-23-python-init-design.md  2026-03-24-auto-detection-design.md  2026-03-24-envrc-merge-design.md  2026-03-24-java-javascript-version-detection-design.md  2026-03-25-devinit-nix-flake-design.md
nix/: package.nix
src/: cli.rs  detection.rs  generator.rs  git_ignore.rs  init_guard.rs  lib.rs  main.rs  prompt.rs  resolution.rs  schema.rs  version_fetch.rs
src/detection/: detectors.rs  engine.rs  services.rs  types.rs
src/detection/detectors/: go.rs  java.rs  (+3 more)
src/generator/: engine.rs
src/schema/: context.rs
templates/: devenv.nix.tera  devenv.yaml.tera
tests/: detection_cli_tests.rs  detection_engine_tests.rs  detection_go_tests.rs  detection_java_tests.rs  detection_javascript_tests.rs  detection_python_tests.rs  detection_rust_tests.rs  detection_services_tests.rs  generate_rust_file_tests.rs  generator_tests.rs  git_ignore_tests.rs  init_guard_tests.rs  version_fetch_tests.rs
