[package]
name = "devinit"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = { version = "1.20" }
clap = { version = "4.6", features = ["derive"] }
dialoguer = { version = "0.12" }
ureq = { version = "3", features = ["json"] }
